--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<div class="playercount">
 			<p>Játssz a <span class="sip" data-ip="mc.hypixel.net" data-port="25565">
-			</span> játékossal a  <span class="ip">cloudnetwork.tk</span> szerveren.</p>
+			</span> játékossal a  <span class="ip">play-cloudnetwork.tk</span> szerveren.</p>
 		</div>
 		<hr>
 
