--- a/rules/rules.html
+++ b/rules/rules.html
@@ -4,7 +4,7 @@
 <title>CloudNetwork::Szabályok</title>
 </head>
 <body>
-<p>
+<p align="center">
 <b>Minecraft szerver szabályzat<b><br><br>
 Tilos a bármilyen hack, X-Ray és hackelt kliens használata. (IP ban örökre)<br>
 Tilos a káromkodás, felnőtt tartalom megosztása! (20perc némítás)<br>
